# routes/index.js
@@ -23,6 +23,7 @@ const UnidadesRouter = require('./unidades.router');
 const ProveedoresRouter = require('./proveedores.router');
 const ReceptoresRouter = require('./receptores.router');
 const TarifasRouter = require('./tarifas.router');
+const FposRouter = require('./fpos.router');
 
 function routerApi(app) {
   const router = express.Router();
@@ -49,6 +50,7 @@ function routerApi(app) {
   router.use('/proveedores', ProveedoresRouter);
   router.use('/receptores', ReceptoresRouter);
   router.use('/tarifas', TarifasRouter);
+  router.use('/fpos', FposRouter);
   router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 }
 
